--- a/Homework/luxtrader/#source/scss/style.scss
+++ b/Homework/luxtrader/#source/scss/style.scss
@@ -67,7 +67,7 @@ body {
 	padding: 0 15px;
 	margin: 0 auto;
 	&_header {
-		@media (max-width: 970px) {
+		@media (max-width: 1000px) {
 			min-width: 100%;
 		}
 	}
@@ -179,7 +179,7 @@ body {
 		display: none;
 	}
 
-	@media (max-width: 970px) {
+	@media (max-width: 1000px) {
 		height: 50px;
 		&::before {
 			z-index: 3;
@@ -333,7 +333,7 @@ body {
 	flex: 0 0 500px;
 	// display: flex;
 	// align-items: center;
-	@media (max-width: 970px) {
+	@media (max-width: 1000px) {
 		padding: 85px 0 80px 0;
 	}
 	&__raw {
@@ -461,19 +461,46 @@ body {
 	}
 
 	&__divider {
-		margin: 0 0 42px 0;
 	}
 
 	&__body {
-		display: flex;
-		justify-content: space-between;
+		display: grid;
+		grid-template: 1fr / 10fr 4fr 10fr 4fr 10fr;
+		margin: 0px 0px 50px 0px;
+		@media (max-width: 1000px) {
+			grid-template: 1fr 20px 1fr 20px 1fr / 250px;
+			justify-content: center;
+			max-height: 530px;
+			overflow-y: auto;
+		}
 	}
 
 	&__item {
+		&_1 {
+			grid-column: 1;
+		}
+		&_2 {
+			grid-column: 3;
+		}
+		&_3 {
+			grid-column: 5;
+		}
+		@media (max-width: 1000px) {
+			grid-column: 1;
+			&_1 {
+				grid-row: 1;
+			}
+			&_2 {
+				grid-row: 3;
+			}
+			&_3 {
+				grid-row: 5;
+			}
+		}
 	}
 }
 
-.clocks {
+.divider {
 	padding: 0 2px;
 	display: flex;
 	align-items: center;
@@ -547,7 +574,7 @@ body {
 		width: 50px;
 		height: 57px;
 	}
-	@media (max-width: 570px) {
+	@media (max-width: 1000px) {
 		&__figures {
 			&_left {
 				margin: 0 40px 0 21px;
@@ -557,6 +584,10 @@ body {
 			}
 		}
 	}
+
+	&_clocks {
+		margin: 0 0 42px 0;
+	}
 }
 
 .item {
@@ -564,7 +595,6 @@ body {
 	position: relative;
 	flex-direction: column;
 	align-items: center;
-	flex: 0 0 250px;
 	&__image {
 		position: relative;
 		top: 0;
@@ -585,10 +615,37 @@ body {
 		height: 50px;
 		margin: 0 0 25px 0;
 	}
+	&__rise {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 203px;
+		height: 50px;
+		background: linear-gradient(
+			to bottom,
+			rgba(205, 181, 136, 1) 0%,
+			rgba(194, 166, 116, 1) 50%,
+			rgba(139, 98, 44, 1) 100%
+		);
+		a {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 197px;
+			height: 44px;
+			background: white;
+			font-family: "PF Din Text Cond Pro";
+			font-size: 21px;
+			line-height: 25px;
+			font-weight: 500;
+			text-transform: uppercase;
+			color: #000000;
+		}
+	}
 }
 .time {
 	position: absolute;
-	top: 201px;
+	bottom: -1px;
 	left: 50%;
 	transform: translateX(-50%);
 	width: 100px;
@@ -605,7 +662,7 @@ body {
 		height: 0;
 		border-left: 50px solid transparent;
 		border-right: 50px solid transparent;
-		border-bottom: 51px solid white;
+		border-bottom: 50px solid white;
 	}
 
 	&__pic {
@@ -631,6 +688,8 @@ body {
 	display: flex;
 	align-items: start;
 	width: 100%;
+	margin: 0 0 24px 0;
+
 	&__views {
 		flex: 0 0 50px;
 		display: flex;
@@ -696,5 +755,235 @@ body {
 	&__currency {
 		font-family: "ALS Rubl";
 		font-size: 14px;
+	}
+	@media (max-width: 1000px) {
+		justify-content: center;
+		&__current {
+			flex: 0 0 auto;
+		}
+	}
+}
+
+.all {
+	&__header {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0px 0px 100px 0px;
+	}
+	&__arrow {
+		position: relative;
+		// width: 107px;
+		width: calc(50px + 57 * ((100vw - 320px) / (2000 - 320)));
+		height: 1px;
+		background: #bb9c66;
+		&::before,
+		&::after {
+			content: "";
+			width: 7px;
+			height: 17.5px;
+			border-left: 1.5px solid #bb9c66;
+			border-right: 1.5px solid #bb9c66;
+			position: absolute;
+			left: 0;
+		}
+		&::before {
+			bottom: 1px;
+			transform: skewX(-45deg) translateX(8.65px);
+		}
+		&::after {
+			top: 1px;
+			transform: skewX(45deg) translateX(8.65px);
+		}
+
+		&_right {
+			transform: rotate(180deg);
+		}
+		// @media (max-width: 550px) {
+		// 	width: 100%;
+		// }
+	}
+
+	&__title {
+		cursor: pointer;
+		margin: 0 42px;
+		position: relative;
+		width: 100px;
+		height: 100px;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background: linear-gradient(
+			to bottom,
+			rgba(205, 181, 136, 1) 0%,
+			rgba(194, 166, 116, 1) 50%,
+			rgba(139, 98, 44, 1) 100%
+		);
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			width: 11px;
+			height: 11px;
+			border: 1px solid #bb9c66;
+			border-radius: 50%;
+		}
+		&::before {
+			left: -37px;
+		}
+		&::after {
+			right: -37px;
+		}
+		p {
+			width: 94px;
+			height: 94px;
+			background: white;
+			border-radius: 50%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-family: "PF Din Text Cond Pro";
+			font-size: 21px;
+			line-height: 25px;
+			font-weight: 500;
+			text-transform: uppercase;
+			color: #000000;
+		}
+	}
+
+	&__body {
+		display: grid;
+		position: relative;
+		top: -42px;
+		grid-template: 250px 50px 250px 50px 250px / 250px 100px 250px 100px 250px;
+		justify-items: center;
+		max-height: 0px;
+		overflow: hidden;
+		transition: all 500ms ease-in-out 0s;
+		&.active {
+			max-height: 1000px;
+			top: 0;
+			transition: all 500ms ease-in-out 0s;
+			overflow-y: auto;
+			@media (max-width: 1000px) {
+				max-height: 600px;
+			}
+		}
+	}
+
+	&__item {
+		position: relative;
+		align-self: center;
+		width: 100%;
+		height: 100%;
+	}
+
+	&__backgroung {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 50%;
+		overflow: hidden;
+	}
+
+	&__forward {
+		padding: 25px 0;
+		position: relative;
+		z-index: 1;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	&__icon {
+		width: 75px;
+		flex: 0 0 75px;
+		border-radius: 50%;
+		overflow: hidden;
+		margin: 0px 0px 25px 0px;
+	}
+
+	&__text {
+		flex: 0 0 50px;
+		text-align: center;
+		font-family: "PF Din Text Cond Pro";
+		font-size: 21px;
+		line-height: 25px;
+		font-weight: 500;
+		text-transform: uppercase;
+		letter-spacing: 0.1em;
+		color: white;
+	}
+
+	&__horizontal-divider {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		&_right {
+			display: none;
+		}
+	}
+
+	&__dot {
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		background: #bb9c66;
+		align-self: center;
+	}
+
+	&__straight {
+		height: 100px;
+		width: 1px;
+		background: #bb9c66;
+	}
+	@media (max-width: 1000px) {
+		&__horizontal-divider {
+			flex-direction: row;
+			width: 100%;
+			&_right {
+				display: flex;
+			}
+		}
+		&__straight {
+			height: 1px;
+			width: 100px;
+			background: #bb9c66;
+		}
+		&__body {
+			grid-template: 250px 50px 250px 50px 250px 50px 250px 50px 250px 50px 250px 50px 250px 50px 250px 50px 250px / 250px;
+			justify-content: center;
+		}
+	}
+}
+.decoration {
+	display: flex;
+	align-items: center;
+	flex: 0 0 50px;
+	width: 100px;
+	justify-content: space-between;
+	&__straight {
+		height: 1px;
+		width: 25px;
+		background: #bb9c66;
+	}
+
+	&__romb {
+		width: 15.56px;
+		height: 15.56px;
+		border: 1px solid #bb9c66;
+		transform: rotate(45deg);
+		align-self: center;
+	}
+	@media (max-width: 1000px) {
+		&__vertical {
+			display: none;
+		}
 	}
 }
